# edvoraassignment

./: README.md  docker-compose.traefik.yml  docker-compose.yaml
.github/workflows/: deploydocker.yml
data/db/base/13395/: pg_internal.init
data/db/base/16384/: 1247  1249  1259  16385  16387  16396  16397  16399  16401  16402  16404  16410  16411  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13395.stat  db_16384.stat  global.stat
mainapp/: Dockerfile  main.py  pyproject.toml
mainapp/env/: db.env  fastapi.env
mainapp/migrations/models/: 0_20211220153332_init.sql
mainapp/src/apps/: routers.py
mainapp/src/apps/edvora/: auth.py  endpoints.py  models.py  pydanticmodels.py  schema.py  service.py
mainapp/src/config/: settings.py
mainapp/static/: .index.js.swp  index.html  index.js
socketserver/: app.py  async_app.py  docker-compose.yaml  pyproject.toml
socketserver/tests/: test_clintochatserver.py
